# macrostrat-ml-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  results  scratch.ipynb  t
api/: app.py  image_appropriate.py  image_loading_util.py  image_relevance.py  model_loading_util.py  schemas.py  text_appropriate.py  text_relevance.py
filter/: api.py  image_appropriate.py  image_loading_util.py  main.py  models.py  processing.py  publish_results.py  text_relevance.py
filter-queue/: image_loading_util.py  main.py  schemas.py  tasks.py
tests/: test.py
