[project]
name = "macrostrat-ml-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.36",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "rq>=2.4.0",
    "setfit>=1.1.2",
    "uvicorn>=0.34.3",
]
